--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
                  <div class = "container">
                      <article class="card">
                         <h3>Интерактивная карточка</h3>
-                         <h5 style="line-height: 10%">(Некоторые участки картинки компьютера кликабельны.)</h5> 
-                         <img src="img/comp.jpg" usemap="#comp" width="441" height="400" border="0" style="max-width:90%">
+<!--                         <h5 style="line-height: 10%">(Некоторые участки картинки компьютера кликабельны.)</h5> -->
+                         <img src="img/comp.jpg" usemap="#comp" width="441" height="400" border="0" style="max-width:100%">
                          <map  name="comp">
-                                <area shape="poly" href="#two" title="Водоблок для процессора. Под ним сам процессор." coords="103,89, 116,122, 101,153, 131,140, 161,152, 151,121, 163,93, 132,102, 103,89, 103,89" >
-                                <area shape="rect" href="#three" title = "Водоблок для охлаждающей жидкости с насосом" coords="236,111, 305,212">
-                                <area shape="rect" href="#four" title = "Радиатор для охлаждения водяной системы"coords="86,44, 304,76">
-                               <area shape="rect" href="#five" title = "Система жидкостного охлаждения с вентиляторами" coords="61,3, 309,42">
-                              <area shape="rect" href="#six" title = "Вентиляторы" coords="220,286, 411,378">
+                             
+                             <area shape="poly" href="#two" title="Водоблок для процессора. Под ним сам процессор." coords="131,100, 98,89, 117,123, 96,154, 135,141, 159,154, 155,122, 170,86, 135,104, 102,91, 131,100">
+                             <area shape="rect" href="#three" title = "Водоблок для охлаждающей жидкости с насосом" coords="236,103, 307,213">
+                             <area shape="rect" href="#four"  title = "Радиатор для охлаждения водяной системы" coords="81,49, 303,73">
+                             <area shape="rect" href="#five" title = "Система жидкостного охлаждения с вентиляторами" coords="60,3, 312,44">
+                             <area shape="rect" href="#six" title = "Вентиляторы" coords="218,290, 413,381">
                         </map>
                         </article>
                     <article class="card">
