--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <main>
             <nav>
            <button id="main_btn">Меню</button>
-            <ol id="main_menu" class="base_menu rounded" style="padding: 3vh; padding-top: 5vh; line-height: 200%; align-items: left; ">
+            <ol id="main_menu" class="base_menu rounded" style="padding: 3vh; padding-top: 5vh; line-height: 200%; align-items: left; min-width:30%">
                 <li ><a href="#">Главная</a></li>
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="gallary.html">Галерея</a></li>
