--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
                  <div class = "container">
                      <article class="card">
                         <h3>Интерактивная карточка</h3>
-<!--                         <h5 style="line-height: 10%">(Некоторые участки картинки компьютера кликабельны.)</h5> -->
-                         <img src="img/comp.jpg" usemap="#comp" width="441" height="400" border="0" style="max-width:100%">
-                         <map  name="comp">
-                             <area shape="poly" href="#two" title="Водоблок для процессора. Под ним сам процессор." coords="131,100, 98,89, 117,123, 96,154, 135,141, 159,154, 155,122, 170,86, 135,104, 102,91, 131,100">
+                         <img src="img/comp.jpg" usemap="#comp" width="441" height="400" border="0" style="max-width:100%" >
+                         <map  name="comp" width="100%" id="Map">
+                             <area shape="poly" href="#two" title="Водоблок для процессора. Под ним сам процессор." coords="131,100, 98,89, 117,123, 96,154, 135,141, 159,154, 155,122, 170,86, 135,104, 102,91, 131,100" >
                              <area shape="rect" href="#three" title = "Водоблок для охлаждающей жидкости с насосом" coords="236,103, 307,213">
                              <area shape="rect" href="#four"  title = "Радиатор для охлаждения водяной системы" coords="81,49, 303,73">
                              <area shape="rect" href="#five" title = "Система жидкостного охлаждения с вентиляторами" coords="60,3, 312,44">
@@ -78,5 +77,18 @@
             function fOpen() {
             main_menu.classList.toggle("menu_open")}
     </script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script>
+        "use strict"
+        ;(function(a)
+        {a.fn.rwdImageMaps=function()
+          {var c=this;var b=function()
+           {c.each(function(){if(typeof(a(this).attr("usemap"))=="undefined"){return}var e=this,d=a(e);a("<img />").load(function(){var g="width",m="height",n=d.attr(g),j=d.attr(m);if(!n||!j)
+                {var o=new Image();o.src=d.attr("src");if(!n){n=o.width}if(!j){j=o.height}}
+                var f=d.width()/100,k=d.height()/100,i=d.attr("usemap").replace("#",""),l="coords";a('map[name="'+i+'"]').find("area").each(function(){var r=a(this);if(!r.data(l)){r.data(l,r.attr(l))}var q=r.data(l).split(","),p=new Array(q.length);for(var h=0;h<p.length;++h){if(h%2===0){p[h]=parseInt(((q[h]/n)*100)*f)}else{p[h]=parseInt(((q[h]/j)*100)*k)}}r.attr(l,p.toString())})}).attr("src",d.attr("src"))})};a(window).resize(b).trigger("resize");
+                                return this}})(jQuery);
+
+        $('img[usemap]').rwdImageMaps();
+    </script>         
     </body>   
 </html>    
