--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                  <div class = "container">
                      <article class="card">
                         <h3>Интерактивная карточка</h3>
+                         <div id="mydiv">
                          <img src="img/comp.jpg" usemap="#comp" width="441" height="400" border="0" style="max-width:100%" >
                          <map  name="comp" width="100%" id="Map">
                              <area shape="poly" href="#two" title="Водоблок для процессора. Под ним сам процессор." coords="131,100, 98,89, 117,123, 96,154, 135,141, 159,154, 155,122, 170,86, 135,104, 102,91, 131,100" >
@@ -30,6 +31,7 @@
                              <area shape="rect" href="#five" title = "Система жидкостного охлаждения с вентиляторами" coords="60,3, 312,44">
                              <area shape="rect" href="#six" title = "Вентиляторы" coords="218,290, 413,381">
                         </map>
+                         </div>     
                         </article>
                     <article class="card">
                         <h3>Элементы системы охлаждения</h3>
